--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
   <meta content="Not Found" property="og:title">
   <meta content="Not Found" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/causal-islands.webflow.css" rel="stylesheet" type="text/css">
+  <link href="{{ site.url }}/css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="{{ site.url }}/css/webflow.css" rel="stylesheet" type="text/css">
+  <link href="{{ site.url }}/css/causal-islands.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -16,7 +16,6 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script defer="" data-domain="causalislands.com" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
   <div class="utility-page-wrap">
@@ -25,7 +24,7 @@
         <div class="heading-jumbo">Page Not Found</div>
         <div class="paragraph-bigger cc-bigger-light">The page you are looking for doesn&#x27;t exist or has been moved.</div>
       </div>
-      <a href="index.html" class="button cc-white-button w-inline-block">
+      <a href="{{ site.url }}/" class="button cc-white-button w-inline-block">
         <div>Go Back to Safety</div>
       </a>
     </div>
