--- a/causal-islands-sponsorship.html
+++ b/causal-islands-sponsorship.html
@@ -1,75 +1,8 @@
-<!DOCTYPE html><!--  Last Published: Mon May 13 2024 17:56:12 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63dcb4fd1dd7454881a7216f" data-wf-site="63d1cb65192f1d661ca41cbf">
-<head>
-  <meta charset="utf-8">
-  <title>Sponsorship | Causal Islands 2023</title>
-  <meta content="Are you a cutting edge technology company interested in aligning your brand with our thoughtfully curated Future of Computing conference? Why not consider sponsoring our event?" name="description">
-  <meta content="Sponsorship | Causal Islands 2023" property="og:title">
-  <meta content="Are you a cutting edge technology company interested in aligning your brand with our thoughtfully curated Future of Computing conference? Why not consider sponsoring our event?" property="og:description">
-  <meta content="https://d3n32ilufxuvd1.cloudfront.net/6317701322a5c60030456e89/upload-dd80baa8-77c3-4e24-95b9-e8e2f57e54e4.jpg" property="og:image">
-  <meta content="Sponsorship | Causal Islands 2023" property="twitter:title">
-  <meta content="Are you a cutting edge technology company interested in aligning your brand with our thoughtfully curated Future of Computing conference? Why not consider sponsoring our event?" property="twitter:description">
-  <meta content="https://d3n32ilufxuvd1.cloudfront.net/6317701322a5c60030456e89/upload-dd80baa8-77c3-4e24-95b9-e8e2f57e54e4.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/causal-islands.webflow.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Raleway:300,regular,700","Raleway:200,300,regular,500,600,700"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
-  <script defer="" data-domain="causalislands.com" src="https://plausible.io/js/script.js"></script>
-</head>
-<body>
-  <a data-w-id="da905fd0-9689-61a2-1ccc-5a206c4bddd6" href="index.html" class="logo-link-wrapper w-inline-block"><img src="images/Logo---Symbol-Only.svg" loading="lazy" alt="Causal Islands logo" class="logo-symbol-only"></a>
-  <div class="nav-container">
-    <div class="mobile-nav">
-      <div class="mobile-nav-contents"><img src="images/close-button.svg" loading="lazy" data-w-id="f06cf088-f826-55e2-1f4c-188db62213f8" height="46" alt="Close menu" class="mobile-nav-close-button">
-        <div class="mobile-nav-items">
-          <a href="program/talks.html" class="nav-item-mobile">Program</a>
-          <a href="location/toronto.html" class="nav-item-mobile">Discover Toronto</a>
-          <a href="causal-islands-sponsorship.html" aria-current="page" class="nav-item-mobile w--current">Sponsors</a>
-          <a href="accessibility.html" class="nav-item-mobile">Accessibility</a>
-          <a href="code-of-conduct.html" class="nav-item-mobile">Code of Conduct</a>
-        </div>
-        <div class="div-block-2">
-          <div class="mobile-nav-date-and-location">April 25–27, 2023   |   Toronto, Canada</div>
-          <a href="https://ti.to/fission/causal-islands-2023/" target="_blank" class="button cc-jumbo-button-menu blue w-inline-block">Buy your tickets</a>
-        </div>
-        <div class="div-block-2">
-          <div class="social-icons">
-            <a href="https://twitter.com/causalislands" target="_blank" class="w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter logo" class="twitter"></a>
-            <a href="https://www.linkedin.com/events/7011799927185887232/" target="_blank" class="w-inline-block"><img src="images/linkedin.svg" loading="lazy" alt="LinkedIn logo" class="linkedin"></a>
-            <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="w-inline-block"><img src="images/mastodon.svg" loading="lazy" alt="Mastodon logo" class="mastodon"></a>
-          </div>
-          <div class="mobile-nav-copyright">©️ 2023 Causal Islands</div>
-        </div>
-        <div class="circle-container-below">
-          <div class="circle menu-01"></div>
-        </div>
-        <div class="circle-container-below">
-          <div class="circle menu-02"></div>
-        </div>
-      </div>
-      <div class="container-mobile-nav w-container">
-        <div class="mobile-nav-top"><img src="images/open-menu-button.svg" loading="lazy" width="46" height="46" alt="Open menu" data-w-id="6df46fc8-4f9c-710a-5769-0baee0acebcf"></div>
-      </div>
-    </div>
-    <div class="desktop-nav">
-      <div class="nav-items-desktop">
-        <a href="program/talks.html" class="nav-item-desktop w-inline-block">Program</a>
-        <a href="location/toronto.html" class="nav-item-desktop w-inline-block">Discover Toronto</a>
-        <a href="causal-islands-sponsorship.html" aria-current="page" class="nav-item-desktop w-inline-block w--current">Sponsors</a>
-        <a href="accessibility.html" class="nav-item-desktop w-inline-block">Accessibility</a>
-        <a href="code-of-conduct.html" class="nav-item-desktop last-item w-inline-block">Code of Conduct</a>
-      </div>
-    </div>
-  </div>
+---
+layout: default
+title: Sponsorship
+permalink: /sponsorship/
+---
   <div class="section start-of-page gradient">
     <div class="container pages w-container">
       <div class="section-header">
@@ -118,86 +51,3 @@
       <div class="circle lens sponsors-b1"></div>
     </div>
   </div>
-  <div class="footer">
-    <div class="div-block-15"></div>
-    <div class="container-footer">
-      <h2 class="footer-header">Don’t miss our next announcement</h2>
-      <div class="paragraph-bigger _01">Subscribe to our newsletter</div>
-      <div class="container-form w-container">
-        <div class="form-block w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" method="get" class="newsletter-signup" data-wf-page-id="63dcb4fd1dd7454881a7216f" data-wf-element-id="531f5c42-51d2-1335-499f-77a36edeb09a"><input class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="Your email" type="email" id="email" required=""><input type="submit" data-wait="" class="submit-button w-button" value="">
-            <div class="w-embed">
-              <style>
-.arrow {pointer-events: none;}
-</style>
-            </div><img src="images/arrow.svg" loading="lazy" alt="Submit button" class="arrow">
-          </form>
-          <div class="success-message w-form-done">
-            <div class="paragraph-small">Thank you! Your submission has been received</div>
-          </div>
-          <div class="error-message w-form-fail">
-            <div class="paragraph-small">Oops! Something went wrong while submitting the form</div>
-          </div>
-        </div>
-      </div>
-      <div class="div-block-4">
-        <div class="div-block-3">
-          <div class="text-block-14"><strong class="bold-text">Learn About</strong></div>
-          <a href="location/toronto.html" class="footer-link">Toronto</a>
-          <a href="accessibility.html" class="footer-link">Accessibility</a>
-          <a href="code-of-conduct.html" class="footer-link">Code of Conduct</a>
-        </div>
-        <div class="div-block-3">
-          <div class="text-block-13"><strong class="bold-text">Important Links</strong></div>
-          <a href="https://ti.to/fission/causal-islands-2023/" target="_blank" class="footer-link">Get your ticket</a>
-          <a href="causal-islands-sponsorship.html" aria-current="page" class="footer-link w--current">Partner with us</a>
-          <a href="program/cfp.html" class="footer-link">Call for proposals</a>
-        </div>
-        <div class="footer-social-links">
-          <div class="bold-text"><strong>Social</strong></div>
-          <a href="https://twitter.com/causalislands" target="_blank" class="footer-link">Twitter</a>
-          <a href="https://www.linkedin.com/events/7011799927185887232" target="_blank" class="footer-link">LinkedIn</a>
-          <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="footer-link">Mastodon</a>
-          <a href="https://discord.gg/DV4xgkEjzq" target="_blank" class="footer-link">Discord</a>
-        </div>
-      </div>
-      <div class="footer-social-links-2">
-        <div class="bold-text"><strong>Social</strong></div>
-        <a href="#" class="footer-link">Twitter</a>
-        <a href="#" class="footer-link">LinkedIn</a>
-        <a href="#" class="footer-link">Mastodon</a>
-      </div>
-    </div>
-    <div class="div-block-16"></div>
-    <div class="circle-container-below">
-      <div class="circle footer-01"></div>
-    </div>
-    <div class="circle-container-below">
-      <div class="circle footer-02"></div>
-    </div>
-    <div class="circle-container-below">
-      <div class="circle footer-03"></div>
-    </div>
-  </div>
-  <div class="cursor-wrapper">
-    <div class="html-embed-2 w-embed">
-      <style>
-body {
-	cursor: url('https://uploads-ssl.webflow.com/63d1cb65192f1d661ca41cbf/63e29d07a0f942ff0b2a5a47_State%3DDefault.svg') 20 20, auto;
-}
-a:hover, button:hover { 
-	cursor: url('https://uploads-ssl.webflow.com/63d1cb65192f1d661ca41cbf/63e29d072883b1830e317251_State%3DHover.svg') 20 20, pointer;
-}
-.cursor-wrapper {
-	pointer-events: none;
-}
-</style>
-    </div>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d1cb65192f1d661ca41cbf" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <html lang="en">
-  ...
-  </html>
-</body>
-</html>
