--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+---
+layout: null
+title: Causal Islands 2023
+excerpt: "Explore the future of computing, April 25-27 in Toronto"
+permalink: /
+--- 
 <!DOCTYPE html><!--  Last Published: Mon May 13 2024 17:56:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63d1cb65192f1d666ea41cc2" data-wf-site="63d1cb65192f1d661ca41cbf">
 <head>
   <meta charset="utf-8">
-  <title>Causal Islands 2023</title>
+  <title>{{ site.title }}</title>
   <meta content="Explore the future of computing, April 25-27 in Toronto" name="description">
   <meta content="Causal Islands 2023" property="og:title">
   <meta content="Explore the future of computing, April 25-27 in Toronto" property="og:description">
@@ -23,7 +29,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script defer="" data-domain="causalislands.com" src="https://plausible.io/js/script.js"></script><!--  [Attributes by Finsweet] CMS Tabs  -->
+<!--  [Attributes by Finsweet] CMS Tabs  -->
   <script async="" src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-cmstabs@1/cmstabs.js"></script>
 </head>
 <body class="body">
@@ -47,11 +53,11 @@ a:hover, button:hover {
     <div class="mobile-nav">
       <div class="mobile-nav-contents"><img src="images/close-button.svg" loading="lazy" data-w-id="f06cf088-f826-55e2-1f4c-188db62213f8" height="46" alt="Close menu" class="mobile-nav-close-button">
         <div class="mobile-nav-items">
-          <a href="program/talks.html" class="nav-item-mobile">Program</a>
-          <a href="location/toronto.html" class="nav-item-mobile">Discover Toronto</a>
-          <a href="causal-islands-sponsorship.html" class="nav-item-mobile">Sponsors</a>
-          <a href="accessibility.html" class="nav-item-mobile">Accessibility</a>
-          <a href="code-of-conduct.html" class="nav-item-mobile">Code of Conduct</a>
+          <a href="/program/" class="nav-item-mobile">Program</a>
+          <a href="/location/" class="nav-item-mobile">Discover Toronto</a>
+          <!-- <a href="/sponsorship/" class="nav-item-mobile">Sponsors</a> -->
+          <a href="/accessibility/" class="nav-item-mobile">Accessibility</a>
+          <a href="/code-of-conduct/" class="nav-item-mobile">Code of Conduct</a>
         </div>
         <div class="div-block-2">
           <div class="mobile-nav-date-and-location">April 25–27, 2023   |   Toronto, Canada</div>
@@ -61,7 +67,7 @@ a:hover, button:hover {
           <div class="social-icons">
             <a href="https://twitter.com/causalislands" target="_blank" class="w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter logo" class="twitter"></a>
             <a href="https://www.linkedin.com/events/7011799927185887232/" target="_blank" class="w-inline-block"><img src="images/linkedin.svg" loading="lazy" alt="LinkedIn logo" class="linkedin"></a>
-            <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="w-inline-block"><img src="images/mastodon.svg" loading="lazy" alt="Mastodon logo" class="mastodon"></a>
+            <a href="https://fission.social/@causalislands" target="_blank" class="w-inline-block"><img src="images/mastodon.svg" loading="lazy" alt="Mastodon logo" class="mastodon"></a>
           </div>
           <div class="mobile-nav-copyright">©️ 2023 Causal Islands</div>
         </div>
@@ -78,11 +84,11 @@ a:hover, button:hover {
     </div>
     <div class="desktop-nav">
       <div class="nav-items-desktop">
-        <a href="program/talks.html" class="nav-item-desktop w-inline-block">Program</a>
-        <a href="location/toronto.html" class="nav-item-desktop w-inline-block">Discover Toronto</a>
-        <a href="causal-islands-sponsorship.html" class="nav-item-desktop w-inline-block">Sponsors</a>
-        <a href="accessibility.html" class="nav-item-desktop w-inline-block">Accessibility</a>
-        <a href="code-of-conduct.html" class="nav-item-desktop last-item w-inline-block">Code of Conduct</a>
+        <a href="/program/" class="nav-item-desktop w-inline-block">Program</a>
+        <a href="/location/" class="nav-item-desktop w-inline-block">Discover Toronto</a>
+        <!-- <a href="/sponsorship/" class="nav-item-desktop w-inline-block">Sponsors</a> -->
+        <a href="/accessibility/" class="nav-item-desktop w-inline-block">Accessibility</a>
+        <a href="/code-of-conduct/" class="nav-item-desktop last-item w-inline-block">Code of Conduct</a>
       </div>
     </div>
   </div>
@@ -103,10 +109,10 @@ a:hover, button:hover {
         <div class="lense"></div>
       </div><img src="images/causal-islands-white-logo.svg" loading="lazy" alt="Casual Islands logo" class="image-6"><img src="images/CI-Responsive-Logo---Off-White.svg" loading="lazy" alt="Casual Islands logo" class="image-10">
       <div class="div-block-32">
-        <a href="virtual.html" class="button cc-jumbo-button header w-button">Watch Conference Talks</a>
+        <a href="/virtual/" class="button cc-jumbo-button header w-button">Watch Conference Talks</a>
         <a href="https://discord.gg/DV4xgkEjzq" class="button cc-jumbo-button header w-button">Join The Community</a>
       </div>
-      <a href="podcast.html" class="button cc-jumbo-button blue w-button">Listen To The Podcast</a>
+      <a href="/podcast/" class="button cc-jumbo-button blue w-button">Listen To The Podcast</a>
     </div>
     <div class="chyron">
       <div data-w-id="fd721ca5-a019-345f-31b9-ddf72041af01" class="chyron-inner-container">
@@ -361,13 +367,15 @@ a:hover, button:hover {
           <div class="div-block-9">
             <p class="paragraph-bigger">We aim to make Causal Islands inclusive and accessible to everyone. Creating an accessible event benefits individuals with visible or known disabilities and also helps to ensure that everyone, including individuals with non-obvious disabilities and/or chronic health conditions, and people of all ages and body types, are able to fully engage in the program.</p>
             <div class="div-block-12"></div>
-            <a href="accessibility.html" class="button pink w-button">Accessibility of the Event</a>
+            <a href="/accessibility/" class="button pink w-button">Accessibility of the Event</a>
           </div>
           <h2 class="heading-10 home">Brought to you by our proud sponsors</h2>
           <div class="div-block-9">
             <div class="w-layout-grid sponsors-grid"><img src="images/Fission-Logo---Off-White.svg" loading="lazy" id="w-node-_145df954-4745-e009-b6aa-0ac49bbe43db-6ea41cc2" alt="Fission Codes logo" class="image-7"><img src="images/blue_yard_white_400.svg" loading="lazy" id="w-node-f16776cb-c890-0bcf-163a-015b5be30580-6ea41cc2" alt="BLUEYARD logo" class="image-8"></div>
+            <!-- 
             <p class="paragraph-bigger">We&#x27;re looking for more sponsors.</p>
-            <a href="causal-islands-sponsorship.html" class="button pink w-button">Partner with us</a>
+            <a href="/sponsorship/" class="button pink w-button">Partner with us</a>
+            -->
           </div>
         </div>
       </div>
@@ -379,68 +387,4 @@ a:hover, button:hover {
       <div class="circle lens section-2e"></div>
     </div>
   </div>
-  <div class="footer">
-    <div class="div-block-15"></div>
-    <div class="container-footer">
-      <h2 class="footer-header">Don’t miss our next announcement</h2>
-      <div class="paragraph-bigger _01">Subscribe to our newsletter</div>
-      <div class="container-form w-container">
-        <div class="form-block w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" method="get" class="newsletter-signup" data-wf-page-id="63d1cb65192f1d666ea41cc2" data-wf-element-id="531f5c42-51d2-1335-499f-77a36edeb09a"><input class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="Your email" type="email" id="email" required=""><input type="submit" data-wait="" class="submit-button w-button" value="">
-            <div class="w-embed">
-              <style>
-.arrow {pointer-events: none;}
-</style>
-            </div><img src="images/arrow.svg" loading="lazy" alt="Submit button" class="arrow">
-          </form>
-          <div class="success-message w-form-done">
-            <div class="paragraph-small">Thank you! Your submission has been received</div>
-          </div>
-          <div class="error-message w-form-fail">
-            <div class="paragraph-small">Oops! Something went wrong while submitting the form</div>
-          </div>
-        </div>
-      </div>
-      <div class="div-block-4">
-        <div class="div-block-3">
-          <div class="text-block-14"><strong class="bold-text">Learn About</strong></div>
-          <a href="location/toronto.html" class="footer-link">Toronto</a>
-          <a href="accessibility.html" class="footer-link">Accessibility</a>
-          <a href="code-of-conduct.html" class="footer-link">Code of Conduct</a>
-        </div>
-        <div class="div-block-3">
-          <div class="text-block-13"><strong class="bold-text">Important Links</strong></div>
-          <a href="https://ti.to/fission/causal-islands-2023/" class="footer-link">Get your ticket</a>
-          <a href="causal-islands-sponsorship.html" class="footer-link">Partner with us</a>
-          <a href="program/cfp.html" class="footer-link">Call for proposals</a>
-        </div>
-        <div class="footer-social-links">
-          <div class="bold-text"><strong>Social</strong></div>
-          <a href="https://twitter.com/causalislands" target="_blank" class="footer-link">Twitter</a>
-          <a href="https://www.linkedin.com/events/7011799927185887232" target="_blank" class="footer-link">LinkedIn</a>
-          <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="footer-link">Mastodon</a>
-          <a href="https://discord.gg/DV4xgkEjzq" target="_blank" class="footer-link">Discord</a>
-        </div>
-      </div>
-      <div class="footer-social-links-2">
-        <div class="bold-text"><strong>Social</strong></div>
-        <a href="#" class="footer-link">Twitter</a>
-        <a href="#" class="footer-link">LinkedIn</a>
-        <a href="#" class="footer-link">Mastodon</a>
-      </div>
-    </div>
-    <div class="div-block-16"></div>
-    <div class="circle-container-below">
-      <div class="circle footer-01"></div>
-    </div>
-    <div class="circle-container-below">
-      <div class="circle footer-02"></div>
-    </div>
-    <div class="circle-container-below">
-      <div class="circle footer-03"></div>
-    </div>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d1cb65192f1d661ca41cbf" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-</body>
-</html>
+  {% include footer.html %}
