--- a/podcast.html
+++ b/podcast.html
@@ -1,75 +1,9 @@
-<!DOCTYPE html><!--  Last Published: Mon May 13 2024 17:56:12 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="64b81d4d714012f8259830ff" data-wf-site="63d1cb65192f1d661ca41cbf">
-<head>
-  <meta charset="utf-8">
-  <title>Podcast</title>
-  <meta content="The Causal Islands Podcast 🏝️ will feature thought-provoking interviews with leading experts in distributed systems, AI, computing, local-first software, and more. We&#x27;ll explore the intricate connections between tech + society, and how these emerging technologies will profoundly shape our future." name="description">
-  <meta content="Podcast" property="og:title">
-  <meta content="The Causal Islands Podcast 🏝️ will feature thought-provoking interviews with leading experts in distributed systems, AI, computing, local-first software, and more. We&#x27;ll explore the intricate connections between tech + society, and how these emerging technologies will profoundly shape our future." property="og:description">
-  <meta content="https://d3n32ilufxuvd1.cloudfront.net/6317701322a5c60030456e89/upload-dd80baa8-77c3-4e24-95b9-e8e2f57e54e4.jpg" property="og:image">
-  <meta content="Podcast" property="twitter:title">
-  <meta content="The Causal Islands Podcast 🏝️ will feature thought-provoking interviews with leading experts in distributed systems, AI, computing, local-first software, and more. We&#x27;ll explore the intricate connections between tech + society, and how these emerging technologies will profoundly shape our future." property="twitter:description">
-  <meta content="https://d3n32ilufxuvd1.cloudfront.net/6317701322a5c60030456e89/upload-dd80baa8-77c3-4e24-95b9-e8e2f57e54e4.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="css/causal-islands.webflow.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Raleway:300,regular,700","Raleway:200,300,regular,500,600,700"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
-  <script defer="" data-domain="causalislands.com" src="https://plausible.io/js/script.js"></script>
-</head>
-<body>
-  <a data-w-id="da905fd0-9689-61a2-1ccc-5a206c4bddd6" href="index.html" class="logo-link-wrapper w-inline-block"><img src="images/Logo---Symbol-Only.svg" loading="lazy" alt="Causal Islands logo" class="logo-symbol-only"></a>
-  <div class="nav-container">
-    <div class="mobile-nav">
-      <div class="mobile-nav-contents"><img src="images/close-button.svg" loading="lazy" data-w-id="f06cf088-f826-55e2-1f4c-188db62213f8" height="46" alt="Close menu" class="mobile-nav-close-button">
-        <div class="mobile-nav-items">
-          <a href="program/talks.html" class="nav-item-mobile">Program</a>
-          <a href="location/toronto.html" class="nav-item-mobile">Discover Toronto</a>
-          <a href="causal-islands-sponsorship.html" class="nav-item-mobile">Sponsors</a>
-          <a href="accessibility.html" class="nav-item-mobile">Accessibility</a>
-          <a href="code-of-conduct.html" class="nav-item-mobile">Code of Conduct</a>
-        </div>
-        <div class="div-block-2">
-          <div class="mobile-nav-date-and-location">April 25–27, 2023   |   Toronto, Canada</div>
-          <a href="https://ti.to/fission/causal-islands-2023/" target="_blank" class="button cc-jumbo-button-menu blue w-inline-block">Buy your tickets</a>
-        </div>
-        <div class="div-block-2">
-          <div class="social-icons">
-            <a href="https://twitter.com/causalislands" target="_blank" class="w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter logo" class="twitter"></a>
-            <a href="https://www.linkedin.com/events/7011799927185887232/" target="_blank" class="w-inline-block"><img src="images/linkedin.svg" loading="lazy" alt="LinkedIn logo" class="linkedin"></a>
-            <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="w-inline-block"><img src="images/mastodon.svg" loading="lazy" alt="Mastodon logo" class="mastodon"></a>
-          </div>
-          <div class="mobile-nav-copyright">©️ 2023 Causal Islands</div>
-        </div>
-        <div class="circle-container-below">
-          <div class="circle menu-01"></div>
-        </div>
-        <div class="circle-container-below">
-          <div class="circle menu-02"></div>
-        </div>
-      </div>
-      <div class="container-mobile-nav w-container">
-        <div class="mobile-nav-top"><img src="images/open-menu-button.svg" loading="lazy" width="46" height="46" alt="Open menu" data-w-id="6df46fc8-4f9c-710a-5769-0baee0acebcf"></div>
-      </div>
-    </div>
-    <div class="desktop-nav">
-      <div class="nav-items-desktop">
-        <a href="program/talks.html" class="nav-item-desktop w-inline-block">Program</a>
-        <a href="location/toronto.html" class="nav-item-desktop w-inline-block">Discover Toronto</a>
-        <a href="causal-islands-sponsorship.html" class="nav-item-desktop w-inline-block">Sponsors</a>
-        <a href="accessibility.html" class="nav-item-desktop w-inline-block">Accessibility</a>
-        <a href="code-of-conduct.html" class="nav-item-desktop last-item w-inline-block">Code of Conduct</a>
-      </div>
-    </div>
-  </div>
+---
+layout: default
+title: Podcast
+excerpt: "The Causal Islands Podcast 🏝️ will feature thought-provoking interviews with leading experts in distributed systems, AI, computing, local-first software, and more. We&#x27;ll explore the intricate connections between tech + society, and how these emerging technologies will profoundly shape our future."
+permalink: /podcast/
+---
   <div class="section start-of-page gradient">
     <div class="container pages">
       <div class="section-header virtual-page">
@@ -88,10 +22,10 @@
         <div style="padding-top:56.17021276595745%" class="video w-video w-embed"><iframe class="embedly-embed" src="https://cdn.embedly.com/widgets/media.html?src=http%3A%2F%2Fwww.youtube.com%2Fembed%2Fvideoseries%3Flist%3DPLfW9my7NCey9jzUvQHb8r6Qz0uCmpzuNq&display_name=YouTube&url=https%3A%2F%2Fwww.youtube.com%2Fplaylist%3Flist%3DPLfW9my7NCey9jzUvQHb8r6Qz0uCmpzuNq&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2Fj3zAHTXp-xw%2Fhqdefault.jpg%3Fsqp%3D-oaymwEWCKgBEF5IWvKriqkDCQgBFQAAiEIYAQ%3D%3D%26rs%3DAOn4CLBZTMit5qMhriedgjF8sbxBTerxGg%26days_since_epoch%3D19558&key=c4e54deccf4d4ec997a64902e9a30300&type=text%2Fhtml&schema=youtube" scrolling="no" allowfullscreen="" title="Causal Islands Podcast"></iframe></div>
       </div>
       <div class="podcast-buttons">
-        <a href="https://music.amazon.com/podcasts/1e848de2-4feb-4b33-ae85-38b4432ab817/causal-islands-podcast" target="_blank" class="podcast-button w-inline-block"><img src="images/Amazon-Music.svg" loading="lazy" alt="" class="pod-bttn"></a>
-        <a href="https://podcasts.apple.com/us/podcast/causal-islands-podcast/id1699682899" target="_blank" class="podcast-button w-inline-block"><img src="images/Apple-Podcasts.svg" loading="lazy" alt="" class="pod-bttn"></a>
-        <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9maXNzaW9uLmNvZGVzL2NhdXNhbGlzbGFuZHMvcG9kY2FzdC54bWw" target="_blank" class="podcast-button w-inline-block"><img src="images/Google-Podcasts.svg" loading="lazy" alt="" class="pod-bttn"></a>
-        <a href="https://open.spotify.com/show/4xpKp7r2DvttHLsQwq0Lqd" target="_blank" class="podcast-button w-inline-block"><img src="images/Spotify.svg" loading="lazy" alt="" class="pod-bttn"></a>
+        <a href="https://music.amazon.com/podcasts/1e848de2-4feb-4b33-ae85-38b4432ab817/causal-islands-podcast" target="_blank" class="podcast-button w-inline-block"><img src="{{ site.url}}/images/Amazon-Music.svg" loading="lazy" alt="" class="pod-bttn"></a>
+        <a href="https://podcasts.apple.com/us/podcast/causal-islands-podcast/id1699682899" target="_blank" class="podcast-button w-inline-block"><img src="{{ site.url}}/images/Apple-Podcasts.svg" loading="lazy" alt="" class="pod-bttn"></a>
+        <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9maXNzaW9uLmNvZGVzL2NhdXNhbGlzbGFuZHMvcG9kY2FzdC54bWw" target="_blank" class="podcast-button w-inline-block"><img src="{{ site.url}}/images/Google-Podcasts.svg" loading="lazy" alt="" class="pod-bttn"></a>
+        <a href="https://open.spotify.com/show/4xpKp7r2DvttHLsQwq0Lqd" target="_blank" class="podcast-button w-inline-block"><img src="{{ site.url}}/images/Spotify.svg" loading="lazy" alt="" class="pod-bttn"></a>
       </div>
       <div class="text-block-17-copy w-clearfix">Or Subscribe TO Our Podcast Feed:<br></div>
       <div id="podcast-feed-url" class="text-block-21">https://fission.codes/causalislands/podcast.xml</div>
@@ -100,70 +34,3 @@
       </div>
     </div>
   </div>
-  <div class="section">
-    <div class="container pages">
-      <div class="virtual-page-footer">
-        <div class="div-block-3">
-          <div class="text-block-14"><strong class="bold-text">Learn About</strong></div>
-          <a href="location/toronto.html" class="footer-link">Toronto</a>
-          <a href="accessibility.html" class="footer-link">Accessibility</a>
-          <a href="code-of-conduct.html" class="footer-link">Code of Conduct</a>
-        </div>
-        <div class="div-block-3">
-          <div class="text-block-13"><strong class="bold-text">Important Links</strong></div>
-          <a href="https://ti.to/fission/causal-islands-2023/" target="_blank" class="footer-link">Get your ticket</a>
-          <a href="causal-islands-sponsorship.html" class="footer-link">Partner with us</a>
-          <a href="program/cfp.html" class="footer-link">Call for proposals</a>
-        </div>
-        <div class="footer-social-links">
-          <div class="text-block-13"><strong class="bold-text">Social</strong></div>
-          <a href="https://twitter.com/causalislands" target="_blank" class="footer-link">Twitter</a>
-          <a href="https://www.linkedin.com/events/7011799927185887232" target="_blank" class="footer-link">LinkedIn</a>
-          <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="footer-link">Mastodon</a>
-          <a href="https://discord.gg/vBZXhTUV" target="_blank" class="footer-link">Discord</a>
-        </div>
-        <div class="footer-social-links-2">
-          <div class="bold-text"></div>
-          <a href="#" class="footer-link">Twitter</a>
-          <a href="#" class="footer-link">LinkedIn</a>
-          <a href="#" class="footer-link">Mastodon</a>
-        </div>
-      </div>
-    </div>
-    <div class="circle-container-below">
-      <div class="circle lens header podcast-footer"></div>
-    </div>
-  </div>
-  <div class="cursor-wrapper">
-    <div class="html-embed-2 w-embed">
-      <style>
-body {
-	cursor: url('https://uploads-ssl.webflow.com/63d1cb65192f1d661ca41cbf/63e29d07a0f942ff0b2a5a47_State%3DDefault.svg') 20 20, auto;
-}
-a:hover, button:hover { 
-	cursor: url('https://uploads-ssl.webflow.com/63d1cb65192f1d661ca41cbf/63e29d072883b1830e317251_State%3DHover.svg') 20 20, pointer;
-}
-.cursor-wrapper {
-	pointer-events: none;
-}
-</style>
-    </div>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d1cb65192f1d661ca41cbf" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <html lang="en">
-  ...
-  <script>
-	let text = document.getElementById('podcast-feed-url').innerHTML;
-  const copyPodcastUrl = async () => {
-    try {
-      await navigator.clipboard.writeText(text);
-    } catch (err) {
-      console.error('Failed to copy: ', err);
-    }
-  }
-  document.getElementById("copy-podcast-feed-url").addEventListener("click", copyPodcastUrl);
-</script>
-  </html>
-</body>
-</html>
