--- a/program/party.html
+++ b/program/party.html
@@ -1,75 +1,8 @@
-<!DOCTYPE html><!--  Last Published: Mon May 13 2024 17:56:12 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63f6bab79e29c45e9cf4254e" data-wf-site="63d1cb65192f1d661ca41cbf">
-<head>
-  <meta charset="utf-8">
-  <title>Party | Causal Islands 2023</title>
-  <meta content="Explore the future of computing, April 25-27 in Toronto" name="description">
-  <meta content="Party | Causal Islands 2023" property="og:title">
-  <meta content="Explore the future of computing, April 25-27 in Toronto" property="og:description">
-  <meta content="https://d3n32ilufxuvd1.cloudfront.net/6317701322a5c60030456e89/upload-dd80baa8-77c3-4e24-95b9-e8e2f57e54e4.jpg" property="og:image">
-  <meta content="Party | Causal Islands 2023" property="twitter:title">
-  <meta content="Explore the future of computing, April 25-27 in Toronto" property="twitter:description">
-  <meta content="https://d3n32ilufxuvd1.cloudfront.net/6317701322a5c60030456e89/upload-dd80baa8-77c3-4e24-95b9-e8e2f57e54e4.jpg" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="../css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="../css/webflow.css" rel="stylesheet" type="text/css">
-  <link href="../css/causal-islands.webflow.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Raleway:300,regular,700","Raleway:200,300,regular,500,600,700"]  }});</script>
-  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.png" rel="apple-touch-icon">
-  <script defer="" data-domain="causalislands.com" src="https://plausible.io/js/script.js"></script>
-</head>
-<body>
-  <a data-w-id="da905fd0-9689-61a2-1ccc-5a206c4bddd6" href="../index.html" class="logo-link-wrapper w-inline-block"><img src="../images/Logo---Symbol-Only.svg" loading="lazy" alt="Causal Islands logo" class="logo-symbol-only"></a>
-  <div class="nav-container">
-    <div class="mobile-nav">
-      <div class="mobile-nav-contents"><img src="../images/close-button.svg" loading="lazy" data-w-id="f06cf088-f826-55e2-1f4c-188db62213f8" height="46" alt="Close menu" class="mobile-nav-close-button">
-        <div class="mobile-nav-items">
-          <a href="../program/talks.html" class="nav-item-mobile">Program</a>
-          <a href="../location/toronto.html" class="nav-item-mobile">Discover Toronto</a>
-          <a href="../causal-islands-sponsorship.html" class="nav-item-mobile">Sponsors</a>
-          <a href="../accessibility.html" class="nav-item-mobile">Accessibility</a>
-          <a href="../code-of-conduct.html" class="nav-item-mobile">Code of Conduct</a>
-        </div>
-        <div class="div-block-2">
-          <div class="mobile-nav-date-and-location">April 25–27, 2023   |   Toronto, Canada</div>
-          <a href="https://ti.to/fission/causal-islands-2023/" target="_blank" class="button cc-jumbo-button-menu blue w-inline-block">Buy your tickets</a>
-        </div>
-        <div class="div-block-2">
-          <div class="social-icons">
-            <a href="https://twitter.com/causalislands" target="_blank" class="w-inline-block"><img src="../images/twitter.svg" loading="lazy" alt="Twitter logo" class="twitter"></a>
-            <a href="https://www.linkedin.com/events/7011799927185887232/" target="_blank" class="w-inline-block"><img src="../images/linkedin.svg" loading="lazy" alt="LinkedIn logo" class="linkedin"></a>
-            <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="w-inline-block"><img src="../images/mastodon.svg" loading="lazy" alt="Mastodon logo" class="mastodon"></a>
-          </div>
-          <div class="mobile-nav-copyright">©️ 2023 Causal Islands</div>
-        </div>
-        <div class="circle-container-below">
-          <div class="circle menu-01"></div>
-        </div>
-        <div class="circle-container-below">
-          <div class="circle menu-02"></div>
-        </div>
-      </div>
-      <div class="container-mobile-nav w-container">
-        <div class="mobile-nav-top"><img src="../images/open-menu-button.svg" loading="lazy" width="46" height="46" alt="Open menu" data-w-id="6df46fc8-4f9c-710a-5769-0baee0acebcf"></div>
-      </div>
-    </div>
-    <div class="desktop-nav">
-      <div class="nav-items-desktop">
-        <a href="../program/talks.html" class="nav-item-desktop w-inline-block">Program</a>
-        <a href="../location/toronto.html" class="nav-item-desktop w-inline-block">Discover Toronto</a>
-        <a href="../causal-islands-sponsorship.html" class="nav-item-desktop w-inline-block">Sponsors</a>
-        <a href="../accessibility.html" class="nav-item-desktop w-inline-block">Accessibility</a>
-        <a href="../code-of-conduct.html" class="nav-item-desktop last-item w-inline-block">Code of Conduct</a>
-      </div>
-    </div>
-  </div>
+---
+layout: default
+title: Party
+permalink: /program/party/
+---
   <div class="section start-of-page gradient">
     <div class="container pages">
       <div class="section-header">
@@ -84,10 +17,9 @@
     <div class="container-pages w-container">
       <div style="-webkit-transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="narrow-page">
         <div class="subnav">
-          <a href="../program/talks.html" class="subnav-item w-button">Talks</a>
-          <a href="../program/workshops.html" class="subnav-item w-button">Workshops</a>
-          <a href="../program/party.html" aria-current="page" class="subnav-item w-button w--current">Party</a>
-          <a href="../program/schedule.html" class="subnav-item w-button">Schedule</a>
+          <a href="/program/" class="subnav-item w-button w--current">Talks</a>
+          <a href="/program/party/" aria-current="page" class="subnav-item w-button">Party</a>
+          <a href="/program/schedule/" class="subnav-item w-button">Schedule</a>
         </div>
         <div class="announcement">
           <h3>Our program is still being finalized</h3>
@@ -110,21 +42,21 @@
         <div class="party-speakers">
           <a href="https://www.causalislands.com/sessions/condemned-to-compute-how-witnessing-the-last-20-years-of-computing-tells-me-were-going-to-be-punished-with-at-least-another-20" class="link-block-3 w-inline-block">
             <div class="presenter party">
-              <div class="avatar-container-schedule"><img src="../images/profile07.png" loading="lazy" sizes="(max-width: 479px) 124px, 118px" srcset="../images/profile07-p-500.png 500w, ../images/profile07-p-800.png 800w, ../images/profile07-p-1080.png 1080w, ../images/profile07.png 1170w" alt="Jenn Schiffer&#x27;s profile picture" class="avatar-image-schedule"></div>
+              <div class="avatar-container-schedule"><img src="{{ site.url }}/images/profile07.png" loading="lazy" sizes="(max-width: 479px) 124px, 118px" srcset="{{ site.url }}/images/profile07-p-500.png 500w, {{ site.url }}/images/profile07-p-800.png 800w, {{ site.url }}/images/profile07-p-1080.png 1080w, {{ site.url }}/images/profile07.png 1170w" alt="Jenn Schiffer&#x27;s profile picture" class="avatar-image-schedule"></div>
               <h4 class="presenter-name">Jenn Schiffer</h4>
               <div class="presenter-title">DIRECTOR OF COMMUNITY @ GLITCH + FASTLY</div>
             </div>
           </a>
           <a href="https://www.causalislands.com/sessions/how-to-write-a-joke-that-will-still-be-funny-in-two-thousand-years" class="link-block-4 w-inline-block">
             <div class="presenter party">
-              <div class="avatar-container-schedule"><img src="../images/profile20.jpeg" loading="lazy" alt="Ramsey Nasser&#x27;s profile picture" class="avatar-image-schedule"></div>
+              <div class="avatar-container-schedule"><img src="{{ site.url }}/images/profile20.jpeg" loading="lazy" alt="Ramsey Nasser&#x27;s profile picture" class="avatar-image-schedule"></div>
               <h4 class="presenter-name">Ramsey Nasser</h4>
               <div class="presenter-title">FOUNDING WORKER-OWNER @ EMMA TECHNOLOGY COOPERATIVE</div>
             </div>
           </a>
           <a href="https://www.causalislands.com/sessions/the-many-stories-of-algorithmic-improvisation-aka-artistic-live-coding" class="link-block-4 w-inline-block">
             <div class="presenter party">
-              <div class="avatar-container-schedule"><img src="../images/profile21.jpeg" loading="lazy" alt="David Ogborn&#x27;s profile picture" class="avatar-image-schedule"></div>
+              <div class="avatar-container-schedule"><img src="{{ site.url }}/images/profile21.jpeg" loading="lazy" alt="David Ogborn&#x27;s profile picture" class="avatar-image-schedule"></div>
               <h4 class="presenter-name">David Ogborn</h4>
               <div class="presenter-title">NETWORKED IMAGINATION LABORATORY @ MCMASTER UNIVERSITY</div>
             </div>
@@ -139,9 +71,9 @@
         <a href="https://ti.to/fission/causal-islands-2023/with/toronto-evening-social" target="_blank" class="button pink party-cta w-button">Buy your ticket</a>
         <div data-delay="4000" data-animation="slide" class="slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="true" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
           <div class="mask w-slider-mask">
-            <div class="w-slide"><img src="../images/lula-lounge.webp" loading="lazy" width="1163" sizes="(max-width: 479px) 83vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 734px" alt="Top down view for Lula Lounge&#x27;s main room. Warm atmosphere, balcony, lots of tables and a beautifully decorated stage." srcset="../images/lula-lounge-p-500.webp 500w, ../images/lula-lounge-p-800.webp 800w, ../images/lula-lounge-p-1080.webp 1080w, ../images/lula-lounge.webp 1399w" class="lula-lounge-images"></div>
-            <div class="w-slide"><img src="../images/lula-lounge-2.webp" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 734px" srcset="../images/lula-lounge-2-p-500.webp 500w, ../images/lula-lounge-2-p-800.webp 800w, ../images/lula-lounge-2-p-1080.webp 1080w, ../images/lula-lounge-2.webp 1125w" alt="View from the inside of Lula Lounge. Warm atmosphere, colored lights, balcony and lots of tables." class="lula-lounge-images"></div>
-            <div class="w-slide"><img src="../images/lula-lounge-3.webp" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 734px" srcset="../images/lula-lounge-3-p-500.webp 500w, ../images/lula-lounge-3-p-800.webp 800w, ../images/lula-lounge-3-p-1080.webp 1080w, ../images/lula-lounge-3.webp 1082w" alt="View from the table to the stage in the main room. Warm ambient, red table cloths, wooden chairs. In the stage we see instruments and a banner which reads: Lula Lounge." class="lula-lounge-images"></div>
+            <div class="w-slide"><img src="{{ site.url }}/images/lula-lounge.webp" loading="lazy" width="1163" sizes="(max-width: 479px) 83vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 734px" alt="Top down view for Lula Lounge&#x27;s main room. Warm atmosphere, balcony, lots of tables and a beautifully decorated stage." srcset="{{ site.url }}/images/lula-lounge-p-500.webp 500w, {{ site.url }}/images/lula-lounge-p-800.webp 800w, {{ site.url }}/images/lula-lounge-p-1080.webp 1080w, {{ site.url }}/images/lula-lounge.webp 1399w" class="lula-lounge-images"></div>
+            <div class="w-slide"><img src="{{ site.url }}/images/lula-lounge-2.webp" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 734px" srcset="{{ site.url }}/images/lula-lounge-2-p-500.webp 500w, {{ site.url }}/images/lula-lounge-2-p-800.webp 800w, {{ site.url }}/images/lula-lounge-2-p-1080.webp 1080w, {{ site.url }}/images/lula-lounge-2.webp 1125w" alt="View from the inside of Lula Lounge. Warm atmosphere, colored lights, balcony and lots of tables." class="lula-lounge-images"></div>
+            <div class="w-slide"><img src="../images/lula-lounge-3.webp" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 767px) 84vw, (max-width: 991px) 76vw, 734px" srcset="{{ site.url }}/images/lula-lounge-3-p-500.webp 500w, {{ site.url }}/images/lula-lounge-3-p-800.webp 800w, {{ site.url }}/images/lula-lounge-3-p-1080.webp 1080w, {{ site.url }}/images/lula-lounge-3.webp 1082w" alt="View from the table to the stage in the main room. Warm ambient, red table cloths, wooden chairs. In the stage we see instruments and a banner which reads: Lula Lounge." class="lula-lounge-images"></div>
           </div>
           <div class="w-slider-arrow-left">
             <div class="w-icon-slider-left"></div>
@@ -154,86 +86,3 @@
       </div>
     </div>
   </div>
-  <div class="footer">
-    <div class="div-block-15"></div>
-    <div class="container-footer">
-      <h2 class="footer-header">Don’t miss our next announcement</h2>
-      <div class="paragraph-bigger _01">Subscribe to our newsletter</div>
-      <div class="container-form w-container">
-        <div class="form-block w-form">
-          <form id="email-form" name="email-form" data-name="Email Form" method="get" class="newsletter-signup" data-wf-page-id="63f6bab79e29c45e9cf4254e" data-wf-element-id="531f5c42-51d2-1335-499f-77a36edeb09a"><input class="text-field-2 w-input" maxlength="256" name="email" data-name="Email" placeholder="Your email" type="email" id="email" required=""><input type="submit" data-wait="" class="submit-button w-button" value="">
-            <div class="w-embed">
-              <style>
-.arrow {pointer-events: none;}
-</style>
-            </div><img src="../images/arrow.svg" loading="lazy" alt="Submit button" class="arrow">
-          </form>
-          <div class="success-message w-form-done">
-            <div class="paragraph-small">Thank you! Your submission has been received</div>
-          </div>
-          <div class="error-message w-form-fail">
-            <div class="paragraph-small">Oops! Something went wrong while submitting the form</div>
-          </div>
-        </div>
-      </div>
-      <div class="div-block-4">
-        <div class="div-block-3">
-          <div class="text-block-14"><strong class="bold-text">Learn About</strong></div>
-          <a href="../location/toronto.html" class="footer-link">Toronto</a>
-          <a href="../accessibility.html" class="footer-link">Accessibility</a>
-          <a href="../code-of-conduct.html" class="footer-link">Code of Conduct</a>
-        </div>
-        <div class="div-block-3">
-          <div class="text-block-13"><strong class="bold-text">Important Links</strong></div>
-          <a href="https://ti.to/fission/causal-islands-2023/" target="_blank" class="footer-link">Get your ticket</a>
-          <a href="../causal-islands-sponsorship.html" class="footer-link">Partner with us</a>
-          <a href="../program/cfp.html" class="footer-link">Call for proposals</a>
-        </div>
-        <div class="footer-social-links">
-          <div class="bold-text"><strong>Social</strong></div>
-          <a href="https://twitter.com/causalislands" target="_blank" class="footer-link">Twitter</a>
-          <a href="https://www.linkedin.com/events/7011799927185887232" target="_blank" class="footer-link">LinkedIn</a>
-          <a href="https://plnetwork.xyz/@causalislands" target="_blank" class="footer-link">Mastodon</a>
-          <a href="https://discord.gg/DV4xgkEjzq" target="_blank" class="footer-link">Discord</a>
-        </div>
-      </div>
-      <div class="footer-social-links-2">
-        <div class="bold-text"><strong>Social</strong></div>
-        <a href="#" class="footer-link">Twitter</a>
-        <a href="#" class="footer-link">LinkedIn</a>
-        <a href="#" class="footer-link">Mastodon</a>
-      </div>
-    </div>
-    <div class="div-block-16"></div>
-    <div class="circle-container-below">
-      <div class="circle footer-01"></div>
-    </div>
-    <div class="circle-container-below">
-      <div class="circle footer-02"></div>
-    </div>
-    <div class="circle-container-below">
-      <div class="circle footer-03"></div>
-    </div>
-  </div>
-  <div class="cursor-wrapper">
-    <div class="html-embed-2 w-embed">
-      <style>
-body {
-	cursor: url('https://uploads-ssl.webflow.com/63d1cb65192f1d661ca41cbf/63e29d07a0f942ff0b2a5a47_State%3DDefault.svg') 20 20, auto;
-}
-a:hover, button:hover { 
-	cursor: url('https://uploads-ssl.webflow.com/63d1cb65192f1d661ca41cbf/63e29d072883b1830e317251_State%3DHover.svg') 20 20, pointer;
-}
-.cursor-wrapper {
-	pointer-events: none;
-}
-</style>
-    </div>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d1cb65192f1d661ca41cbf" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="../js/webflow.js" type="text/javascript"></script>
-  <html lang="en">
-  ...
-  </html>
-</body>
-</html>
