footer links corrected

--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@ local-first web apps and community mesh networks. Their goal is to make resilien
           <div class="div-block-5">
             <p class="paragraph-bigger">Our inaugural Causal Islands conference will take place in Toronto, ON at the historic Paradise Theatre in the Bloorcourt Village neighborhood. Built in 1937, the theatre features an Art Deco style bar and an award-winning restaurant.</p>
             <p class="paragraph-bigger">Nestled on Lake Ontario’s northwestern shore, Toronto is a diverse and creative metropolis and the 3rd largest tech hub in North America.</p>
-            <a href="location/toronto.html" class="link-2">Discover more about Toronto</a>
-            <a href="location/the-venue.html" class="link-2">Check out the venue</a>
+            <a href="/location/" class="link-2">Discover more about Toronto</a>
+            <a href="/location/venue/" class="link-2">Check out the venue</a>
           </div>
-          <a href="location/travel-hotel.html" class="button cc-jumbo-button w-button">Plan your travel</a>
+          <a href="/location/travel-hotel/" class="button cc-jumbo-button w-button">Plan your travel</a>
         </div>
       </div>
     </div>
